signature done, used google tumbnail to fix img

--- a/testSignature.html
+++ b/testSignature.html
@@ -24,7 +24,7 @@
                                     <tr>
                                         <td
                                             style="vertical-align:top;padding:.01px 14px 0.01px 1px;width:107px;text-align:center;">
-                                            <img src="insight-events-logo-resize.jpg" height="auto" width="107"
+                                            <img src="https://drive.google.com/thumbnail?id=1lxyUzaz9vqaLPnuiZbdVtjs7UAFKL2LL" height="auto" width="107"
                                                 alt="photo"
                                                 style="width:107px;vertical-align:middle;border-radius:4px;padding-top: 4px;">
                                         </td>
@@ -35,7 +35,7 @@
                                                         <p style="margin:.1px;line-height:120%;font-size:16px;">
                                                             <span
                                                                 style="text-transform:initial;font-weight:bold;font-style:normal;font-family:Verdana;color:#45668E;letter-spacing:0;white-space:nowrap;font-size:16px;">
-                                                                Vladimir Badzhorov
+                                                                Test Signature
                                                             </span>
                                                             <br>
                                                             <span
@@ -60,7 +60,7 @@
                                                                     <p
                                                                         style=margin:1px;line-height:99%;font-size:11px;color:#212121;>
                                                                         <span style="white-space:nowrap;">
-                                                                            <img src="https://lh3.googleusercontent.com/pw/AP1GczPE6WX3VfnTl_DJfWpDsDCG-QSR62CNwQUXcwRInkpOAEJuht-MRjD5t2mDs5fh1QV2lvBHE_R2BwMdqA_QhiMdTYAS5UOtC8Z1PB3s6I2cK4ht0KM=s50-p-k"
+                                                                            <img src="https://drive.google.com/thumbnail?id=1Dr8pNnk1uQuhlM9E89gCilvQhpS5ItUZ"
                                                                                 style="line-height:120%;width:12px;vertical-align: middle;"
                                                                                 alt="icon">
                                                                             <!--[if mso]><span>&nbsp;</span><![endif]-->
@@ -69,7 +69,7 @@
                                                                                 rel="nofollow noreferrer">
                                                                                 <span
                                                                                     style="line-height:120%;font-family:Verdana;color:#212121;white-space:nowrap;">
-                                                                                    +359899943955
+                                                                                    +359888888888
                                                                                 </span>
                                                                             </a>
                                                                         </span>
@@ -82,7 +82,7 @@
                                                                     <p
                                                                         style=margin:1px;line-height:99%;font-size:11px;color:#212121;>
                                                                         <span style="white-space:nowrap;">
-                                                                            <img src="https://lh3.googleusercontent.com/pw/AP1GczPilh6uhCH2zi4ZDIoqv_QPocPaEv_pQI-433ZF2ny6PGuixNevdQusPDUCVy-2-7M0CCZ506apZw4QHmrjB3PfGuWf1FNzxnqo3ZKGwt2-AoC1HEU=s50-p-k"
+                                                                            <img src="https://drive.google.com/thumbnail?id=1qtSsWll9mkFZM13kcivF80q7ZVf-3hw3"
                                                                                 style="line-height:120%;width:12px;vertical-align: middle;"
                                                                                 alt="icon">
                                                                             <!--[if mso]><span>&nbsp;</span><![endif]-->
@@ -105,7 +105,7 @@
                                                                     <p
                                                                         style=margin:1px;line-height:99%;font-size:11px;color:#212121;>
                                                                         <span style="white-space:nowrap;">
-                                                                            <img src="https://lh3.googleusercontent.com/pw/AP1GczMhcecdUlnTJ8Ly3-SYh7H3NpWtrfwHNNdftl8l7_kR-hka1zoUsaukUVvgv9vNbme9yn1meafYayyl0wrNbLmzrtyLw6mgaX60CGF4VsMElLqL-Jo=s50-p-k"
+                                                                            <img src="https://drive.google.com/thumbnail?id=1VH-7gnvp7dMobm5A4AzNvurIs_fLytsJ"
                                                                                 style="line-height:120%;width:12px;vertical-align: middle;"
                                                                                 alt="icon">
                                                                             <!--[if mso]><span>&nbsp;</span><![endif]-->
@@ -128,7 +128,7 @@
                                                                     <p
                                                                         style=margin:1px;line-height:99%;font-size:11px;color:#212121;>
                                                                         <span style="white-space:nowrap;">
-                                                                            <img src="https://lh3.googleusercontent.com/pw/AP1GczNnuakH6z0sH5tFBxCUWT5gXiBUeSSDBV8reSpTwgfm6b5MGCmn7GjpYQEc4zH3J9gw7r651-CMfpWze-5aw-5cGarecAvNRI1A4bJUqp_MvmUvRjk=s50-p-k"
+                                                                            <img src="https://drive.google.com/thumbnail?id=1U9EAhQav4lYA96xkG-KF8d3ry9q0cG_Q"
                                                                                 style="line-height:120%;width:12px;vertical-align: middle;"
                                                                                 alt="icon">
                                                                             <!--[if mso]><span>&nbsp;</span><![endif]-->
@@ -156,10 +156,10 @@
                                                                 <td text-align="left"
                                                                     style="padding-right:6px;text-align:center;padding-top:0;">
                                                                     <p style="margin:1px;">
-                                                                        <a href="https://www.linkedin.com/in/vladimir-badjorov-74988136/"
+                                                                        <a href="https://www.linkedin.com/company/insight-events-bulgaria/"
                                                                             target="_blank" rel="nofollow noreferrer">
                                                                             <img width="24" height="24"
-                                                                                src="https://lh3.googleusercontent.com/pw/AP1GczPmrzXW-kQAB69BOlWi503G1CBwv4zF-cqjPbtYw0P2QXwIV_P1oqD1t4P3va7wWj3GaE2OmVD4fwvIPW8OKjTtZ64hNFN8cICBm33RX9zUPxWxWxs=s50-p-k"
+                                                                                src="https://drive.google.com/thumbnail?id=1Nvy02iQf-7pua-S1Tcnezf0F8Pi468xG"
                                                                                 style="float:left;border:none;"
                                                                                 alt="linkedin" />
                                                                         </a>
@@ -168,10 +168,10 @@
                                                                 <td text-align="left"
                                                                     style="padding-right:6px;text-align:center;padding-top:0;">
                                                                     <p style="margin:1px;">
-                                                                        <a href="https://lh3.googleusercontent.com/pw/AP1GczO2SsSVuvktueARmbi1Qye8AxL-ODzQzD_J-6PbVy4f_Xn8nweMgaEREYCXEIqiVbKRDy45JSlV1rMASh9ucYuFudsNlSYELXmBiYWFWkBStFi7b20=s50-p-k"
+                                                                        <a href="https://www.facebook.com/insighteventsbulgaria/"
                                                                             target="_blank" rel="nofollow noreferrer">
                                                                             <img width="24" height="24"
-                                                                                src="icon-facebook.png"
+                                                                                src="https://drive.google.com/thumbnail?id=1N0unOifD7MvdNwkx4zVWOWjAWNloJHnI"
                                                                                 style="float:left;border:none;"
                                                                                 alt="facebook" />
                                                                         </a>
@@ -183,7 +183,7 @@
                                                                         <a href="https://www.instagram.com/insighteventsbulgaria/"
                                                                             target="_blank" rel="nofollow noreferrer">
                                                                             <img width="24" height="24"
-                                                                                src="https://lh3.googleusercontent.com/pw/AP1GczON1Wj95rVE4IjP8bRYnGoqtNHInXWrXBRqDz2XhWcpli7jZH3n3SboEGOfCbFQBedgWfuJv5PfNMQaNOI4K4L3u_FdNPm7Va4FXgB59HhVeR5dQ9M=s50-p-k"
+                                                                                src="https://drive.google.com/thumbnail?id=13gJjev5KINIsCYZ4lJZIccNCR8G4EH0e"
                                                                                 style="float:left;border:none;"
                                                                                 alt="instagram" />
                                                                         </a>
